<resources>
    <string name="title_activity_wallpaper">WallpaperActivity</string>
    <string name="app_name">Vavilon Walls</string>
    <integer name="com_vk_sdk_AppId">6216101</integer>

    <string name="no_saved_walls">У вас нет скачанных обоев :(</string>
    <string name="no_connection">Что-то с интернет соединением :(</string>
    <string name="swipe_to_reload">Потяните, чтоб обновить</string>
    <string name="access_denied_msg">Необходимо авторизоваться в вк</string>
    <string name="auth_in_menu_msg">Авторизуйтесь в боковом меню слева</string>

    <string name="exit_confirmation_msg">Вы действительно хотите выйти?</string>
    <string name="error_network_msg">Необходимо интернет соединение!</string>
    <string name="error_load_msg">Не удалось загрузить обои :(</string>
    <string name="error_download_msg">Попробуйте загрузить позже :(</string>
    <string name="error_setting_wall_msg">Попробуйте установить позже :(</string>
    <string name="succes_msg">Успешно!</string>
    <string name="file_exists_msg">Вы уже скачивали эти обои!</string>
    <string name="need_permission_msg">Для работы приложения необходимо разрешение на доступ к памяти :(</string>

    <string name="no">Нет</string>
    <string name="yes">Да</string>

    <string name="downloading">Скачиваю...</string>
    <string name="setting_wall">Устанавливаю обои...</string>

    <string name="features">Возможности аккаунта</string>
    <string name="account_features_msg">
        Войдя в свой аккаунт ВКонтакте вы сможете: \n\n

        - скачивать обои в максимальном качестве; \n
        - просматривать категорию "Новые обои".\n\nПриложение
        не собирает и не передает никакую личную информацию.
        Разрешить доступ к аккаунту?</string>

    <string name="exit_from_vk">Выход из вк</string>
    <string name="exit_from_vk_msg">Вы действительно хотите выйти из вк?</string>

    <string name="categories">Категории</string>
    <string name="saved_walls">Сохраненные</string>
    <string name="remove_ad">Убрать рекламу</string>
    <string name="share">Поделиться</string>
    <string name="rate_app">Оценить</string>
    <string name="about_info">О приложении</string>
    <string name="feedback">Написать разработчику</string>
    <string name="login">Войти в ВК</string>
    <string name="logout">Выйти из ВК</string>
    <string name="group">Группа ВК</string>

    <string name="share_text">В этом приложении собраны самые крутые обои:
    https://play.google.com/store/apps/details?id=com.shomazzapp.walls</string>

    <string name="set">Установить</string>к
    <string name="download">Скачать</string>
    <string name="delete">Удалить</string>
    
    <string name="vk_access_denied">К сожалению, с 16 марта Вконтакте закрыл доступ
        неавторизованным пользователям к ресурсам соцсети.\n\nПоэтому,
        для дальнейшего использования данного приложения необходимо авторизоваться.\n\nСделать
        это вы можете в боковом меню приложения, нажав на кнопку "Войти в вк".\n\nПриносим
        свои извинения :(</string>

    <string name="about_text">О приложении Vavilon Walls:\n\nVavilon Walls это отобранные вручную
        качественные обои с разрешением 1080x1920 пикселей с ежедневным обновлением.\n\nПри поиске
        обоев мы стараемся выбирать наиболее интересные, необычные и качественные изображения.\n\nОбои
        удобно отсортированы по категориям. Недавно добавленные обои отображаются в отдельной категории.
        Есть возможность просматривать и удалять сохраненные или установленные обои.\n\nДля работы
        приложения требуется интернет-соединение, а так же доступ к социальной сети ВКонтакте,
        откуда скачиваются обои максимального качества. Сразу после установки Вам будет предложено
        авторизоваться через социальную сеть (приложение никому не передает и не хранит никакие
        сведения о Вас).\n\nЕсли Вы являетесь автором одного или нескольких изображений, просим
        написать нам письмо на vavilonwalls@gmail.com.\n\nОсобая благодарность:\n \n
    Artyom Nikitin \n
    Inna Gribenikova \n
    Роман Васильчук \n
    Руслан Грибовский \n
    Игорь Шестернёв \n
    Дмитрий Кравцов \n
    Иван Яндатун \n
    Виталий Демиденко \n
    Арсен Исаев \n
    Александр Стародумов \n
    Люда Ханжина \n
    Джек \n
    Генрих Чаллари \n
    Радик Баязитов \n
    Максим Воронин \n
    Саша Сёмин \n
    Ильдар Ханнанов \n
    Ольга Белякина \n
    Иван Тарасов \n
    Евдокия Чегеварова \n
    Александр Сапич \n
    Zakir Omarov \n
    Максим Малахов \n
    Константин Смирнов \n
    Андрей Ружицкий \n
    Михаил Файзулин \n
    Vladislav Pereverzev \n
    Ольга Белякина \n
    Magomed Aliev \n
    Павел Суманеев \nРуслан Грибовский \n
    </string>
    <string name="feedback_text">
        Если у Вас есть вопросы или предложения касательно контента или работы приложения,
        Вы можете связаться с нами по следующим адресам.\n\nОбщие вопросы:
        vavilonwalls@gmail.com\n\nРазработка приложения: shamilmag10031@gmail.com</string>
    <string name="exit">Выход</string>
</resources>
